package enshud.s2.parser;

import enshud.s2.parser.Helper.FileRead;

public class Parser {
    /**
     * サンプルmainメソッド．
     * 単体テストの対象ではないので自由に改変しても良い．
     */
    public static void main(final String[] args) {
        // normalの確認
        //new Parser().run("data/ts/normal01.ts");
        //new Parser().run("data/ts/normal02.ts");

        // synerrの確認
        //new Parser().run("data/ts/synerr03.ts");
        new Parser().run("data/ts/synerr05.ts");
    }

    /**
     * TODO
     * <p>
     * 開発対象となるParser実行メソッド．
     * 以下の仕様を満たすこと．
     * <p>
     * 仕様:
     * 第一引数で指定されたtsファイルを読み込み，構文解析を行う．
     * 構文が正しい場合は標準出力に"OK"を，正しくない場合は"Syntax error: line"という文字列とともに，
     * 最初のエラーを見つけた行の番号を標準エラーに出力すること （例: "Syntax error: line 1"）．
     * 入力ファイル内に複数のエラーが含まれる場合は，最初に見つけたエラーのみを出力すること．
     * 入力ファイルが見つからない場合は標準エラーに"File not found"と出力して終了すること．
     *
     * @param inputFileName 入力tsファイル名
     */
    public void run(final String inputFileName) {

        if (!inputFileName.endsWith(".ts")) {    //拡張子の識別
            System.err.println("Extension Error");
        }

        FileRead fileRead = new FileRead();
        fileRead.fileRead(inputFileName);
    }
}
